# deep_scan

./: .dockerignore  .env  .gitignore  4.51.3  Dockerfile  README.md  STREAMLIT_DEPLOYMENT.md  deploy.py  development_instructions.md  extraction_output.json  extraction_output.xlsx  lineage.json  lineage_config.json  main.py  project_overview.md  pyproject.toml  refined_extractor.py  requirements.txt  requirements.xt  result.json  scanner.py  setup.py  streamlit_app.py  test.py
.streamlit/: secrets.toml
2/okfoods-articles/: README.md  s3_upload.py
4/Sample Databricks Notebooks_Set2/: Dimension_IDL_DIM_DATE_ARBYS.py  Dimension_IDL_DIM_DATE_FISCAL_BWW.py  External_weather_forecast_load_from_cdm_to_snowflake_staging_bulk_or_incremental.py  Fact_IDL_ROLL_VISIT_COUNT_BWW.py  IDL_CHANNEL_DIM.py  IDL_CUSTOMER_ACTIVITY_FACT.py  IDL_CUSTOMER_ADDRESS_INFO_PLR.py  IDL_CUSTOMER_CERTIFICATE_FACT.py  (+20 more)
5 (No Mappings - Have not handled this pattern so far)/: data_movement_processor.txt
Consumer/: consumer_extract.py  consumer_hub_raw_table_load.py  consumer_master_table_load.py  customerdnaattributes_hub_raw_table_load.py  customerdnaattributes_master_table_load.py  customerdnaattributes_sat_raw_table_load.py
Scripts/: data_movement_wrapper.txt  rule_engine_executor_rs.txt
config/: __init__.py  settings.py
deep_scan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
extractor/: extractor.py
parser/: __init__.py  parser.py
scripts/: verify_api_key.py
tools/: __init__.py  extractor.py  extractors.py  sql_lineage_extractor.py
ui/: __init__.py  app.py
(+163 files in other folders)
