[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_scan"
version = "0.1.0"
description = "Code Extractor POC"
requires-python = ">=3.8"
dependencies = [
    "google>=3.0.0",
    "langchain>=0.0.27",
]

[tool.setuptools]
packages = ["config", "parser", "extractor", "ui"]
