[project]
name = "codebase-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "groq>=0.4.0",
    "graphviz>=0.20.1",
    "jsonschema>=4.23.0",
    "openai>=1.77.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pydantic-settings>=2.9.1",
    "sqlparse>=0.5.3",
    "streamlit>=1.45.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
